<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2C2C"
    android:contentDescription="@string/Lupa"
    android:hapticFeedbackEnabled="false"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <Button
        android:id="@+id/button"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:backgroundTint="#FD0000"
        android:onClick="Inicio"
        android:text="@string/BotonInicio"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,UsingOnClickInXml,TextContrastCheck"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#000000"
        android:onClick="RadicarPQRSD"
        android:text="@string/BotonRadicarPqrsd"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button5"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="184dp"
        android:backgroundTint="#000000"
        android:onClick="IniciarSesion"
        android:text="@string/IniciarSesion"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button4"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#000000"
        android:onClick="ConsultarPQRSD"
        android:text="@string/BotonConsultarPqrsd"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="UsingOnClickInXml" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="#FB0808"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="97dp"
            android:layout_height="match_parent"
            android:layout_marginStart="268dp"
            android:contentDescription="@string/Logo"
            app:srcCompat="@drawable/barra" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/Lupa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:srcCompat="@android:drawable/ic_menu_search"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="34dp"
        android:layout_height="37dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/Lupa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:srcCompat="@android:drawable/checkbox_on_background" />

</androidx.constraintlayout.widget.ConstraintLayout>