<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c2c2c"
    tools:context=".MenuAdmin">

    <Button
        android:id="@+id/button3"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:layout_marginBottom="328dp"
        android:backgroundTint="#EA0909"
        android:onClick="Inicio"
        android:text="@string/Salir"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button9"
        android:layout_width="314dp"
        android:layout_height="52dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="592dp"
        android:backgroundTint="#7C7A7A"
        android:onClick="Casos"
        android:text="@string/Nuevos"
        android:textColor="#000000"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintVertical_bias="0.415"
        tools:ignore="DuplicateSpeakableTextCheck,UnknownIdInLayout,UsingOnClickInXml" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="#FB0808"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="1dp">

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="89dp"
        android:layout_height="42dp"
        android:baselineAligned="false"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/barra" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="411dp"
        android:layout_height="289dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/Config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="BDconfig"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.519"
        app:srcCompat="@android:drawable/ic_menu_manage"
        tools:ignore="ContentDescription,DuplicateSpeakableTextCheck,SpeakableTextPresentCheck,UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>